# word-ferry

./: .gitattributes  .gitignore  README.MD  pyproject.toml
data/vocab/: word_ferry.model  word_ferry.vocab
scripts/: build_vocabulary.py  corpus_analyze.py  corpus_extractor.py  d_model_calculator.py  sample_generator.py
src/word_ferry/: main.py  path.py  tester.py  trainer.py
src/word_ferry/components/: cached_decoder.py  collate.py  config.py  dataset.py  dropout_scheduler.py  logger.py  model.py  sampler.py  tokenizer.py
src/word_ferry/components/infer/: cached_decoder.py  cached_decoder_layer.py  cached_multihead_attention.py
src/word_ferry/components/train/: collate.py  dataset.py  dropout_scheduler.py  sampler.py
src/word_ferry/core/: constants.py  tdr_guard.py  utils.py
