[project]
name = "word-ferry"
version = "0.1.0"
description = "跨语言翻译：将一种语言的意义摆渡到另一种语言"
requires-python = "==3.13.*"
dependencies = [
    "torch==2.10.0",
    "tqdm==4.67.3",
    "sentencepiece==0.2.1",
    "tensorboard==2.20.0",
    "sacrebleu>=2.6.0",
    "numpy>=2.4.2",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools==82.*", "wheel"]
build-backend = "setuptools.build_meta"
